--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Phaser Game</title>
+    <title>Vibe Code - Adaptive Game AI</title>
     <style>
         body { margin: 0; background: #000; display: flex; flex-direction: column; }
         #main-content { display: flex; flex: 1; }
@@ -100,6 +100,6 @@
         <h3>Recorded Events</h3>
         <div id="events-content"></div>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html> 
