fixed stamina regeneration

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <h3>Recorded Events</h3>
         <div id="events-content"></div>
     </div>
+    <canvas id="screenshot-canvas" style="display:none;"></canvas>
     <script type="module" src="src/main.js"></script>
 </body>
 </html> 
